--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background: lightgrey;
+}
+
 canvas{
     position: absolute;
     left: 50%;
@@ -6,3 +10,15 @@ canvas{
     border: 2px solid black;
     
 }
+
+ @media screen and (max-width: 640px) {
+    canvas {
+        position: fixed;
+       display: block;
+       float: none;
+       width:  310px;
+       height: 500px;
+
+    }
+    
+  }
